<resources>
    <string name="app_name">Sary</string>
    <string name="store">Store</string>
    <string name="orders">Orders</string>
    <string name="my_page">My Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Search for...</string>
    <string name="greeting">Good Morning! &#x1F44B;</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="support">Support</string>
    <string name="announcements">Announcements</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="confirm">Confirm</string>
    <string name="select_language">Select Language</string>
</resources>