<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/storeFragment"
        android:name="com.mokhtar.sarytask.ui.home.HomeFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.mokhtar.sarytask.ui.order.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mokhtar.sarytask.ui.profile.ProfileFragment"
        android:label="@string/my_page"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_bottomSheet"
            app:destination="@id/bottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.mokhtar.sarytask.ui.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_storeFragment"
            app:destination="@id/storeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <dialog
        android:id="@+id/bottomSheet"
        android:name="com.mokhtar.sarytask.ui.profile.LanguageFragment"
        tools:layout="@layout/language_bottom_sheet_layout" />
</navigation>