<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_curved_corners">

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/select_language"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <RadioGroup
       android:id="@+id/rg"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:checkedButton="@id/rbArabic"
       app:layout_constraintTop_toBottomOf="@+id/tv_greeting">
       <RadioButton
           android:id="@+id/rbArabic"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_margin="16dp"
           android:background="@drawable/background_curved_all_corners"
           android:text="@string/arabic"
            />

       <RadioButton
           android:id="@+id/rbEnglish"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_margin="16dp"
           android:background="@drawable/background_curved_all_corners"
           android:text="@string/english"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/rbArabic" />

       <RadioButton
           android:id="@+id/rbUrdu"
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_margin="16dp"
           android:background="@drawable/background_curved_all_corners"
           android:text="Urdu"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/rbEnglish" />
   </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/rg"
        app:layout_constraintStart_toStartOf="@+id/rg"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>